update: show version

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
   <div class="operate">
+    <div class="version">
+      CONVERT_JSON2DTS@<span id="version_name"></span>
+    </div>
     <div class="select-container">
       <sl-select id="mode"
-        value="interfaces"
-        label="Select a generate mode">
+        value="interfaces">
         <sl-option value="interfaces">Generate Interfaces</sl-option>
         <sl-option value="dts">Generate .d.ts</sl-option>
       </sl-select>
